sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value b
b: Boolean;
^AlgBubbleSort1:4: error: not found: value b
b= false
^AlgBubbleSort1:5: error: not found: value b
while(b){
      ^AlgBubbleSort1:6: error: not found: value b
b= false	
^AlgBubbleSort1:13: error: not found: value b
		b=true
                ^