sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
b: Boolean;
b= false
while(b){
b= false	


for(i<-0 to getNombreValeurs()-2){
	
	if(plusPetit(i,i+1)){
		echange(i,i+1)
		b=true
	}
}
}
}
